admin's css js img modify

--- a/src/Jili/ApiBundle/Resources/views/Admin/adwAd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/adwAd.html.twig
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 <form  method="get" action="{{ path('_api_getAdwInfo')}}">
-<table align="center" width="1024">
+<table align="center" width="1024" class="test">
 			 <tr><td>date</td><td><input type="text" name="date"/></td></tr>
 			<tr><td>time</td> <td><input type="text" name="time"/></td></tr>
 			<tr><td>type</td><td><input type="text" name="type"/></td></tr>
