--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeCsvWen.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeCsvWen.html.twig
@@ -25,6 +25,8 @@ $(document).ready(function(){
 &nbsp;兑换结束时间:<input name="end_time" id="end" value="{% if end %}{{ end }}{% endif %}" size="18" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;
 <input type="button" id="select" name="select" value="查 询"/>&nbsp;<input type="submit" id="add" name="add" value="导出兑换数据"/></td></tr>
 <tr><td colspan="7">&nbsp;</td></tr>
+  </table>
+<table align="center" width="1024" class="list">
     	<tr>
         	  <th>兑换id</th>
             <th>兑换账号</th>
