--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeInWen.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeInWen.html.twig
@@ -34,7 +34,7 @@ return false;
 </table>
 <input type="hidden" value="{{ csrf_token }}" name="csrf_token" />
 </form>
-<div style="padding:30px;">
+<div style="padding:30px;" class="tips">
 提示：一次提交执行完成后，请点击"刷新页面"，可继续提交文件</br></br>
 <a href="{{ path('_admin_exchangeInWen') }}" >刷新页面</a>
 </div>
