--- a/src/Jili/ApiBundle/Resources/views/Admin/game.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/game.html.twig
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 <form  method="post" action="{{ path('_api_getGamePoint')}}">
-<table align="center" width="1024">
+<table align="center" width="1024" class="test">
         <tr><td>point_uid</td><td><input type="text" name="point_uid"/></td></tr>
 		<tr><td>game_point</td><td><input type="text" name="game_point"/></td></tr>
 			 <tr><td>game_date</td><td><input type="text" name="game_date"/></td></tr>
@@ -21,6 +21,4 @@
 			 <tr><td>attendance_point</td><td><input type="text" name="attendance_point"/></td></tr>
 			<tr><td>&nbsp;</td><td><input type="submit" value='submit' /></td></tr>
     </table></form>
-    
-
 </BODY></HTML>
