--- a/src/Jili/ApiBundle/Resources/views/Admin/gameAd.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/gameAd.html.twig
@@ -8,7 +8,7 @@
 </HEAD>
 <BODY>
 <form  method="post" action="{{ path('_api_getGameAd')}}">
-<table align="center" width="1024">
+<table align="center" width="1024" class="test">
         <tr><td>session_id</td><td><input type="text" name="session_id"/></td></tr>
 		<tr><td>point_uid</td><td><input type="text" name="point_uid"/></td></tr>
 			 <tr><td>point_pid</td><td><input type="text" name="point_pid"/></td></tr>
@@ -20,6 +20,4 @@
 			 <tr><td>point</td><td><input type="text" name="point"/></td></tr>
 			<tr><td>&nbsp;</td><td><input type="submit" value='submit' /></td></tr>
     </table></form>
-    
-
 </BODY></HTML>
