--- a/src/Jili/ApiBundle/Resources/views/Admin/importAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/importAdver.html.twig
@@ -12,6 +12,7 @@
 <tr><td><h3>导入cpa数据:</h3></td><td>&nbsp;</td></tr>
 <tr><td>csv文件:<input type="file" name="csv" /></td><td><input type="submit" name="add" value="提 交"/></td></tr>
 </table>
+<div class="tips">
 <p>&nbsp;</p>
 <p>cpa-csv文件内容参考：</p>
 <p>&nbsp;</p>
@@ -19,6 +20,7 @@
 <p>一号店,积粒网,2013-07-27 14:00:30,300*250,50,已认证,2013/7/27 15:05,'49','131'</p>
 <p>注册申领白银投资宝典,积粒网,2013-07-26 11:20:34,300*250,40,已认证,2013/7/24 15:05,'21','93'</p>
 <p>&nbsp;</p>
+</div>
 {% if code %}
     {% for item in code %}
         <center><font color='red'>{{ item }}</font></center>
