--- a/src/Jili/ApiBundle/Resources/views/Admin/infoCheckinPointTimes.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoCheckinPointTimes.html.twig
@@ -22,7 +22,7 @@ $(document).ready(function(){
 </script>
 </HEAD>
 <BODY>
-<table align="center" width="1024">
+<table align="center" width="1024" class="list">
         <tr>
             <th>开始时间</th>
             <th>结束时间</th>
