--- a/src/Jili/ApiBundle/Resources/views/Admin/main.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/main.html.twig
@@ -4,11 +4,11 @@
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
 </HEAD>
 <BODY>
-<TABLE cellSpacing=0 cellPadding=0 width="100%" align=center border=0>
+<TABLE cellSpacing=0 cellPadding=0 width="100%" align=center border=0 class="main">
   <TR height=28>
     <TD background="{{ asset('img/admin/title_bg1.jpg')}}">当前位置: </TD></TR>
-  <TR>
-    <TD bgColor=#b1ceef height=1></TD></TR>
+  <TR height=1>
+    <TD bgColor=#b1ceef></TD></TR>
   <TR height=20>
     <TD background="{{ asset('img/admin/shadow_bg.jpg')}}"/></TD></TR></TABLE>
 <TABLE cellSpacing=0 cellPadding=0 width="90%" align=center border=0>
