--- a/src/Jili/ApiBundle/Resources/views/Admin/selectUser.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/selectUser.html.twig
@@ -25,9 +25,10 @@
 <tr><td>&nbsp;</td></tr>
 <tr><td>注册开始时间:<input name="start_time" value="{{ start_time }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
 &nbsp;注册结束时间:<input name="end_time" value="{{ end_time }}" size="26" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;<input type="submit" name="add" value="提 交"/></td></tr>
+<tr><td colspan="7">&nbsp;</td></tr>
 </table>
 
-<table border="1px" cellspacing="0px" class="member_table"> 
+<table border="1px" cellspacing="0px" class="member_table list"> 
     <tr>
         <td width="20px;">1</td>
         <th>Registered from ww</th>
