--- a/src/Jili/BackendBundle/Resources/views/AnalogChanet/cpa.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/AnalogChanet/cpa.html.twig
@@ -23,7 +23,7 @@
 
 <form  method="POST" action="{{ path('jili_backend_analogchanet_cpa')}}">
 
-    <table align="center" width="1024">
+    <table align="center" width="1024" class="test">
 
         <tr>
             <td>date</td>
