--- a/src/Jili/BackendBundle/Resources/views/EdmUnsubscribe/add.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/EdmUnsubscribe/add.html.twig
@@ -7,7 +7,7 @@
 {% block body%}
 
 <form action="{{ path('_edm_unsubscribe_add_confirm') }}" method="post" id="form1" >
-    <table align='center'>
+    <table align='center' class="search">
         <tr>
             <td>&nbsp;</td>
             <td>&nbsp;</td>
