--- a/src/Jili/EmarBundle/Resources/views/AdminWebsites/detail.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminWebsites/detail.html.twig
@@ -1,8 +1,5 @@
-
-<table align='center'>
-<tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr><td cols="2"><h1>商家详细接口返回</h1></td></tr>
-<tr><td>&nbsp;</td><td>&nbsp;</td></tr>
+<h1 align="center">商家详细接口返回</h1>
+<table align='center' class="list">
         <tbody>
 {% if  detail is not empty  %}
         <tr>
