--- a/src/Wenwen/FrontendBundle/Resources/views/Exchange/alipayConfirm.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Exchange/alipayConfirm.html.twig
@@ -24,7 +24,7 @@
 					<span id="idCard_error"></span>
 				</li>
 			</ul>
-			<div class="backError">{% if code is defined %}{{code}}{% endif %}</div>
+			<div class="backError idCardError">{% if code is defined %}{{code}}{% endif %}</div>
 			<div class="btn spec"><span id="alipay_save">下一步</span></div>
 			<input type="hidden" value="{{ tokenKey }}" name="tokenKey" />
     		</form>
