--- a/app/Resources/views/adminBase.html.twig
+++ b/app/Resources/views/adminBase.html.twig
@@ -9,7 +9,7 @@
 {% endblock %}
 
 {% block javascripts %}
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 {% endblock %}
 </head>
 
