--- a/src/Jili/ApiBundle/Resources/views/Admin/addPointSearch.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/addPointSearch.html.twig
@@ -17,12 +17,13 @@ $(document).ready(function(){
 </script>
 </HEAD>
 <BODY>
-<p>注：不选择时间，默认取今天的数据</p>
-<p>&nbsp;</p>
-<p>购物返利场合</p>
-<p>status 1：订单开始&nbsp;&nbsp; 2：确认中&nbsp;&nbsp; 3：成功(已完成)&nbsp;&nbsp; 4：失败(已拒绝)</p>
-<p>&nbsp;</p>
-<table align="center" width="">
+<div class="tips">
+  <p>&nbsp;</p>
+  <p>注：不选择时间，默认取今天的数据。</p>
+  <p>购物返利场合</p>
+  <p>status 1：订单开始&nbsp;&nbsp; 2：确认中&nbsp;&nbsp; 3：成功(已完成)&nbsp;&nbsp; 4：失败(已拒绝)</p>
+</div>
+<table align="center" width="" class="search">
 <form action="{{ path('_admin_addPointSearch')}}" method="post" id="form1"}} >
 <tr><td colspan="7" align="center">&nbsp;</td></tr>
 <tr><td colspan="7" align="center">
@@ -40,6 +41,8 @@ email:<input type="text" id="email" name="email" value="{% if email %}{{ email }
 <input type="button" id="select" name="select" value="查 询"/>&nbsp;</td></tr>
 </form>
 <tr><td colspan="7">&nbsp;</td></tr>
+  </table>
+  <table align="center" width="" class="list">
     	<tr>
         	<th>user id</th>
             <th>email</th>
