--- a/src/Jili/ApiBundle/Resources/views/Admin/infoBanner.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoBanner.html.twig
@@ -7,11 +7,11 @@
 <script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 </HEAD>
 <BODY>
-<table align="center" width="1024">
+<table align="center" width="1024" class="list">
     	<tr>
             <th>广告图片</th>
             <th>广告url</th>
-            <th>操作</th>
+            <th class="oper">操作</th>
         </tr>
         {% if pagination %}
          {% for item in pagination %}
