--- a/src/Jili/ApiBundle/Resources/views/Admin/infoBusinessActivity.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoBusinessActivity.html.twig
@@ -3,9 +3,9 @@
 <HEAD>
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
-<LINK href="{{ asset('css/calendar.css')}}" type=text/css rel=stylesheet>
+<LINK href="{{ asset('css/calendar.css')}}" type="text/css" rel="stylesheet">
 <script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
-<SCRIPT src="{{ asset('js/plugin/load.js')}}" type=text/javascript></SCRIPT>
+<SCRIPT src="{{ asset('js/plugin/load.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/plugin/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/kindeditor/kindeditor.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
@@ -22,7 +22,7 @@ $(document).ready(function(){
 </script>
 </HEAD>
 <BODY>
-<table align="center" width="1024">
+<table align="center" width="1024" class="list">
       <tr>
           <th>活动标题</th>
             <th>活动开始时间</th>
