--- a/src/Jili/ApiBundle/Resources/views/Admin/infoCallboard.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoCallboard.html.twig
@@ -7,7 +7,7 @@
 <script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 </HEAD>
 <BODY>
-<table align="center" width="1024">
+<table align="center" width="1024" class="list">
     	<tr>
         	<th>公告标题</th>
             <th>公告作者</th>
