--- a/src/Jili/ApiBundle/Resources/views/Admin/infoCheckinShop.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoCheckinShop.html.twig
@@ -22,7 +22,7 @@ $(document).ready(function(){
 </script>
 </HEAD>
 <BODY>
-<table align="center" width="1024">
+<table align="center" width="1024" class="list">
       <tr>
           <th>商店名</th>
             <th>间隔(天数)</th>
