--- a/src/Jili/ApiBundle/Resources/views/Admin/infoMs.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoMs.html.twig
@@ -7,8 +7,8 @@
 <script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 </HEAD>
 <BODY>
-<table align="center" width="1024">
-      <tr align="center"><td colspan="5"><h3>消息管理0{{ id }}</h3></td></th>
+  <h3 align="center">消息管理0{{ id }}</h3>
+<table align="center" width="1024" class="list">
     	<tr>
         	<th>公告标题</th>
             <th>公告发布者</th>
