--- a/src/Jili/BackendBundle/Resources/views/EdmUnsubscribe/list.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/EdmUnsubscribe/list.html.twig
@@ -3,8 +3,8 @@
 <head>
 <meta http-equiv=content-type content="text/html; charset=utf8">
 <link href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
-<link href="{{ asset('css/pagenav.css')}}" rel="stylesheet" type="text/css" />
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
+<link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function(){
   $("#select").click(function (){
@@ -14,8 +14,8 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-<table align="center" width="">
-    <form action="{{ path('_edm_unsubscribe_list')}}" method="post" id="form1"}} >
+<table align="center" width="" class="search">
+    <form action="{{ path('_edm_unsubscribe_list')}}" method="post" id="form1" >
     <tr>
         <td colspan="7" align="center">&nbsp;</td>
     </tr>
@@ -26,13 +26,7 @@ $(document).ready(function(){
     </tr>
     </form>
  </table>
-   <table align="center" width="" border="0"> 
-    <tr>
-        <td>&nbsp;</td>
-    </tr>
-    <tr>
-        <td>&nbsp;</td>
-    </tr>
+   <table align="center" width="" border="0" class="list"> 
     <tr>
         <th>user_id</th>
         <th>email</th>
