--- a/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/editExperienceAdvertisement.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ExperienceAdvertisement/editExperienceAdvertisement.html.twig
@@ -4,8 +4,8 @@
 <META http-equiv=Content-Type content="text/html; charset=gb2312">
 <LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
 <LINK href="{{ asset('css/calendar.css')}}" type=text/css rel=stylesheet>
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
-<script src="{{ asset('js/load.js')}}" type=text/javascript></script>
+<script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
+<SCRIPT src="{{ asset('js/plugin/load.js')}}" type="text/javascript"></SCRIPT>
 </HEAD>
 <BODY>
 <form action="{{ path('_bankend_editExperienceAdvertisement', {'id': app.request.get('id') }) }}" method="post" id="form1" {{ form_enctype(form) }} >
