--- a/src/Jili/BackendBundle/Resources/views/PointManage/pointHistorySearch.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/PointManage/pointHistorySearch.html.twig
@@ -3,10 +3,10 @@
 <head>
 <meta http-equiv=content-type content="text/html; charset=utf8">
 <link href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
-<link href="{{ asset('css/pagenav.css')}}" rel="stylesheet" type="text/css" />
-<script src="{{ asset('js/jquery-1.7.js')}}" type="text/javascript"></script>
-<script src="{{ asset('js/load.js')}}" type=text/javascript></script>
-<script src="{{ asset('js/my97datepicker/wdatepicker.js')}}" type="text/javascript"></script>
+<link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
+<script src="{{ asset('js/lib/jquery-1.11.1.min.js')}}" type="text/javascript"></script>
+<SCRIPT src="{{ asset('js/plugin/load.js')}}" type=text/javascript></SCRIPT>
+<script src="{{ asset('js/plugin/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
 <script src="{{ asset('js/kindeditor/kindeditor.js')}}" type="text/javascript"></script>
 <script type="text/javascript">
 $(document).ready(function(){
@@ -23,8 +23,8 @@ $(document).ready(function(){
 </script>
 </head>
 <body>
-<p>注：email必须输入</p>
-<table align="center" width="">
+<p class="tips">注：email必须输入</p>
+<table align="center" width="" class="search">
     <p>
     {% if message is defined %}
     <center><font color='red'>{{message}}</font></center>
@@ -51,6 +51,8 @@ $(document).ready(function(){
     <tr>
         <td colspan="7">&nbsp;</td>
     </tr>
+    </table>
+    <table align="center" width="" class="list">
     <tr>
         <th>id</th>
         <th>user id</th>
