--- a/src/Jili/BackendBundle/Resources/views/RebateActivity/edit.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/RebateActivity/edit.html.twig
@@ -7,7 +7,7 @@
 
 {% block javascripts %}
 {{ parent() }}
-<script src="{{ asset('js/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
+<script src="{{ asset('js/plugin/My97DatePicker/WdatePicker.js')}}" type="text/javascript"></script>
 {% endblock %}
 
 {% block body%}
@@ -64,7 +64,7 @@
 
 </form>
 
-<div>
+<div class="tips">
 <a href="{{ path('rebate_activity_admin_retrieve') }}">Return</a> | 
 <a href="{{ path('rebate_activity_admin_new') }}">Add</a>
 </div>
