--- a/src/Jili/EmarBundle/Resources/views/AdminWebsites/index.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminWebsites/index.html.twig
@@ -1,12 +1,11 @@
 {% extends '::base.html.twig' %}
-
+{% block stylesheets %}
+<LINK href="{{ asset('css/admin.css')}}" type="text/css" rel="stylesheet">
+{% endblock %}
 {% block body -%}
     
 <h1 align="center" >配置 emar商家列表 </h1><!-- EmarWebsites list -->
-
-    <table  align="center" >
-
-
+    <table  align="center" class="list">
         <thead>
         {% if entities|length > 0 %}
             <tr>
