--- a/src/Jili/EmarBundle/Resources/views/AdminWebsites/new.html.twig
+++ b/src/Jili/EmarBundle/Resources/views/AdminWebsites/new.html.twig
@@ -3,13 +3,8 @@
 {% block body %}
 
 {% form_theme form 'form_table_layout.html.twig' %}    
-
-<table align='center'>
-<tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-<tr><td cols="2"><h1>新增emar商家</h1></td></tr> <!-- EmarWebsites creation -->
-<tr><td>&nbsp;</td><td>&nbsp;</td></tr>
-
-    
+<h1 align='center'>新增emar商家</h1>
+<table align='center' class="search">
     <form action="{{ path('admin_emar_websites_create') }}" method="post" {{ form_enctype(form) }}>
 {{ form_errors(form) }}
 
@@ -60,7 +55,7 @@
 </table>
 
 
-<ul class="record_actions">
+<ul class="record_actions tips">
     <li>
         <a href="{{ path('admin_emar_websites') }}">
             Back to the list
