--- a/web/css/admin.css
+++ b/web/css/admin.css
@@ -1,43 +1,98 @@
-BODY {
-  MARGIN: 0px;
+*{
+  margin: 0; padding: 0;
 }
-
-P {
-  MARGIN: 0px;
+body{
+  line-height: 150%;
+  font-size: 12px;
+  font-family: "Verdana", "Arial", "Helvetica", "sans-serif";
+  color: #000;
+  background-color: #fff;
 }
-
-BODY {
-  COLOR: #000;
-  BACKGROUND-COLOR: #fff;
+img{
+  vertical-align: top;
 }
-
-BODY {
-  FONT-SIZE: 12px;
-  LINE-HEIGHT: 150%;
-  FONT-FAMILY: "Verdana", "Arial", "Helvetica", "sans-serif";
+table{
+  border-collapse: collapse;
+  font-size: 12px;
+  font-family: "Verdana", "Arial", "Helvetica", "sans-serif";
 }
-
-TABLE {
-  FONT-SIZE: 12px;
-  LINE-HEIGHT: 150%;
-  FONT-FAMILY: "Verdana", "Arial", "Helvetica", "sans-serif";
+table.menu table{
+  margin-bottom: 5px;
 }
-
-INPUT {
-  FONT-SIZE: 12px;
-  FONT-FAMILY: "Verdana", "Arial", "Helvetica", "sans-serif";
+table.menu table.first{
+  margin-top: 5px;
 }
-
-SELECT {
-  FONT-SIZE: 12px;
-  FONT-FAMILY: "Verdana", "Arial", "Helvetica", "sans-serif";
+table.menu th, table.menu td{
+  height: 22px;
+  line-height: 22px;
 }
-
-TEXTAREA {
-  FONT-SIZE: 12px;
-  FONT-FAMILY: "Verdana", "Arial", "Helvetica", "sans-serif";
+table.header{
+  border-bottom: 4px solid #1c5db6;
 }
-
+form table{
+  width: 80%;
+  margin: 0 auto;
+}
+table.list{
+  width: 80%;
+  text-align: center;
+  margin: 20px auto;
+  border: 1px solid #eee;
+  word-break:break-all; 
+  word-wrap:break-word;
+}
+table.list th, table.list td{
+  height: 30px;
+  border: 1px solid #eee;
+}
+table.list th.oper{
+  width: 100px;
+}
+table.list th.longCon{
+  width: 25%;
+}
+table.list td:last{
+  width: 80px;
+}
+input, textarea, select, table.ke-container, input.Wdate{
+  margin-bottom: 5px;
+  border: 1px solid #dbdbdb;
+}
+input[type="file"]{
+  border: none;
+}
+input[type="text"], input.Wdate{
+  padding: 0 3px;
+  height: 24px;
+  line-height: 24px;
+}
+input[type="submit"], input[type="button"]{
+  margin: 10px 0 20px;
+  width: 65px;
+  height: 24px;
+  line-height: 24px;
+  border: 1px solid #999;
+}
+input[type="button"].J_JumpTo{
+  margin: 0;
+}
+table.test{
+  width: 80%;
+  margin: 10px auto 20px;
+}
+table.search{
+  margin: 10px auto;
+}
+.tips{
+  width: 80%;
+  margin: 0 auto;
+}
+ul.tips{
+  list-style: none;
+}
+h1, h3{
+  margin-top: 10px;
+}
 A:link {
   COLOR: #036;
   TEXT-DECORATION: none;
