--- a/web/sass/exchangeFlow.scss
+++ b/web/sass/exchangeFlow.scss
@@ -146,7 +146,7 @@
 		text-align: center;
 		height: 50px;
 		line-height: 50px;
-		&.flowInfo{
+		&.flowInfo, &.idCardError{
 			text-align: left;
 			padding-left: 200px;
 		}
