--- a/src/Jili/ApiBundle/Resources/views/Admin/infoAdver.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/infoAdver.html.twig
@@ -8,8 +8,10 @@
 </HEAD>
 <BODY>
 <form action="{{ path('_admin_infoAdver')}}" method="post" id="form1"}} >
-<table align="center" width="1024" class="list">
+<table align="center" width="1024" class="search">
     <tr><td colspan="6" align="center">标题搜索:<input type="text" name="title" value="{{ title }}" /><input type="submit" name="search" value="搜 索"/></td></tr>
+  </table>
+  <table align="center" width="1024" class="list">
     	<tr>
         	<th>广告标题</th>
             <th>广告截至时间</th>
