--- a/src/Jili/BackendBundle/Resources/views/Vote/activelist.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/Vote/activelist.html.twig
@@ -1,10 +1,10 @@
 {% block stylesheets %}
-<link href="{{ asset('css/pagenav.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/admin.css')}}" rel="stylesheet" type="text/css" />
+<link href="{{ asset('css/pageNav.css')}}" rel="stylesheet" type="text/css" />
 {% endblock %}
 
-</script>
-<h2>実施中の設問</h2>
-<table>
+<h2 align="center">実施中の設問</h2>
+<table class="list">
     <tr>
         <th>时间</th>
         <th>ID</th>
@@ -25,14 +25,13 @@
    </tr>
     {% endfor %}
     {% endif %}
-
     <tr>
-    <td colspan="5">
-    {% if paging %}
-    {% if pagination is defined %}{{ knp_pagination_render(pagination) }}{%endif %}
-    {% else %}
-    <a href="{{ path('_admin_vote_activelist', {'paging': true}) }}">more</a>
-    {% endif %}
-    </td>
+      <td colspan="5" align="right">
+      {% if paging %}
+      {% if pagination is defined %}{{ knp_pagination_render(pagination) }}{%endif %}
+      {% else %}
+      <a href="{{ path('_admin_vote_activelist', {'paging': true}) }}">more</a>
+      {% endif %}
+      </td>
     </tr>
 </table>
