--- a/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Help/newGuide.html.twig
@@ -19,7 +19,7 @@
     <div class="newGuide">
         <ul class="clearfix">
         	<li>
-            	<em><img src="{{ asset('img/help/icon01.png') }}" width="105" height="84"/></em>
+            	<em><img src="{{ asset('img/help/icon01.png') }}" width="105" height="84" alt="问卷调查"/></em>
                 <dl>
                     <dt>问卷调查</dt>
                     <dd>选择喜欢的商家进入，购买商品就能返利哦！</dd>
@@ -27,7 +27,7 @@
                 </dl>
             </li>
             <li>
-            	<em><img src="{{ asset('img/help/icon02.png') }}" width="105" height="84"/></em>
+            	<em><img src="{{ asset('img/help/icon02.png') }}" width="105" height="84" alt="快速问答"/></em>
                 <dl>
                     <dt>快速问答</dt>
                     <dd>玩玩小游戏、做做问卷，米粒轻松到手！</dd>
@@ -35,7 +35,7 @@
                 </dl>
             </li>
             <li>
-            	<em><img src="{{ asset('img/help/icon03.png') }}" width="105" height="84"/></em>
+            	<em><img src="{{ asset('img/help/icon03.png') }}" width="105" height="84" alt="购物返利"/></em>
                 <dl>
                     <dt>购物返利</dt>
                     <dd>为您推荐最实惠的商家！为您寻找最实惠的活动！</dd>
@@ -43,7 +43,7 @@
                 </dl>
             </li>
             <li>
-            	<em><img src="{{ asset('img/help/icon04.png') }}" width="105" height="84"/></em>
+            	<em><img src="{{ asset('img/help/icon04.png') }}" width="105" height="84" alt="广告体验"/></em>
                 <dl>
                     <dt>广告体验</dt>
                     <dd>为您推荐最实惠的商家！为您寻找最实惠的活动！</dd>
@@ -51,7 +51,7 @@
                 </dl>
             </li>
             <li>
-            	<em><img src="{{ asset('img/help/icon05.png') }}" width="105" height="84"/></em>
+            	<em><img src="{{ asset('img/help/icon05.png') }}" width="105" height="84" alt="游戏体验"/></em>
                 <dl>
                     <dt>游戏体验</dt>
                     <dd>每天摇色子，每周统计排名，第一名更有5888米粒奖励！</dd>
@@ -59,7 +59,7 @@
                 </dl>
             </li>
             <li>
-            	<em><img src="{{ asset('img/help/icon06.png') }}" width="105" height="84"/></em>
+            	<em><img src="{{ asset('img/help/icon06.png') }}" width="105" height="84" alt="邀请好友"/></em>
                 <dl>
                     <dt>邀请好友</dt>
                     <dd>为您推荐最实惠的商家！为您寻找最实惠的活动！</dd>
