--- a/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/complete.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/Questionnaire/complete.html.twig
@@ -13,7 +13,7 @@
 <div class="qnWrap">
 	<div class="qnCon qnEnd">
 		<div class="qnEndTxt clearfix">
-			<span class="left"><img src="{{ asset('img/questionnaire/normalface.png') }}"></span>
+			<span class="left"><img src="{{ asset('img/questionnaire/normalface.png') }}" alt="图片"></span>
 			<span class="txt left"><h2>亲爱的用户！</h2>感谢您参加本次的问卷调查。积分会在调查结束后的3周内自动累计。</span>
 		</div>
 		<div class="qnEndRecommend">
