--- a/src/Wenwen/FrontendBundle/Resources/views/User/resetSuccess.html.twig
+++ b/src/Wenwen/FrontendBundle/Resources/views/User/resetSuccess.html.twig
@@ -15,7 +15,7 @@
 		<div class="step3">
 			<div class="steps"><span>1 输入邮箱地址</span><span class="pass">2 重置密码</span><span class="last active">3 完成</span></div>
 			<div class="main-resetPwd-con">
-				<div><img src="{{ asset('img/common/success_email.png') }}" alt=""><span><b>密码修改成功！</b><a href="{{ path('wenwen_frontend_home_home') }}">回首页</a></span></div>
+				<div><img src="{{ asset('img/common/success_email.png') }}" alt="密码修改成功"><span><b>密码修改成功！</b><a href="{{ path('wenwen_frontend_home_home') }}">回首页</a></span></div>
 			</div>
 		</div>
 	</div>
