--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeCsvWen.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeCsvWen.html.twig
@@ -18,13 +18,11 @@ $(document).ready(function(){
 </HEAD>
 <BODY>
 <form action="{{ path('_admin_exchangeCsvWen')}}" method="post" id="form1"}} >
-<table align="center" width="1024">
-<tr><td colspan="7">&nbsp;</td></tr>
+<table align="center" width="1024" class="search">
 <tr><td colspan="7">&nbsp;</td></tr>
 <tr><td colspan="7" align="center">兑换开始时间:<input id="start" name="start_time" value="{% if start %}{{ start }}{% endif %}" size="18" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
 &nbsp;兑换结束时间:<input name="end_time" id="end" value="{% if end %}{{ end }}{% endif %}" size="18" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>&nbsp;
 <input type="button" id="select" name="select" value="查 询"/>&nbsp;<input type="submit" id="add" name="add" value="导出兑换数据"/></td></tr>
-<tr><td colspan="7">&nbsp;</td></tr>
   </table>
 <table align="center" width="1024" class="list">
     	<tr>
