--- a/src/Jili/ApiBundle/Resources/views/Admin/exchangeInfo.html.twig
+++ b/src/Jili/ApiBundle/Resources/views/Admin/exchangeInfo.html.twig
@@ -20,8 +20,8 @@ $(document).ready(function(){
 </script>
 </HEAD>
 <BODY>
-<form action="{{ path('_admin_exchangeInfo')}}" method="post" id="form1"}} >
-<table align="center" width="1024">
+<form action="{{ path('_admin_exchangeInfo')}}" method="post" id="form1">
+<table align="center" width="1024" class="search">
 <tr><td colspan="12">&nbsp;</td></tr>
 <tr><td colspan="12">&nbsp;</td></tr>
 <tr><td colspan="12" align="center">兑换开始时间:<input id="start" name="start_time" value="{% if start %}{{ start }}{% endif %}" size="18" maxlength="60" readonly="readonly" onClick="WdatePicker()"  class="Wdate" style="cursor:pointer"/>
@@ -35,6 +35,8 @@ $(document).ready(function(){
 <type type="hidden" id="hided" />
 <input type="button" id="select" name="select" value="查 询"/>&nbsp;<input type="submit" id="add" name="add" value="导出兑换数据"/></td></tr>
 <tr><td colspan="12">&nbsp;</td></tr>
+  </table>
+  <table align="center" width="1024" class="list">
     	<tr>
         	<th>exchangeAccount</th>
         	<th>oppositeAccount</th>
@@ -67,6 +69,7 @@ $(document).ready(function(){
             {% elseif item.exType == 4 %}
                  <td align="center">{{ item.exchangeItemNumber }}</td>
            {% else %}
+                  <td align="center"></td>
             {% endif %}
             {% if item.exType == 1 %}
                  <td align="center">91wenwen</td>
@@ -77,6 +80,7 @@ $(document).ready(function(){
             {% elseif item.exType == 4 %}
                  <td align="center">mobile</td>
            {% else %}
+                <td align="center"></td>
             {% endif %}
 
            <td align="center">{% if item.status==1 %}success{% elseif  item.status==2 %}fail{% else %}audit{% endif %}</td>
