--- a/src/Jili/BackendBundle/Resources/views/ActivityGathering/create_taobao_order_total_form.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ActivityGathering/create_taobao_order_total_form.html.twig
@@ -8,9 +8,8 @@ Taobao订单数量创建-201501月活动-{{ parent() }}
 
 {% include("JiliBackendBundle::session_notification.html.twig") %}
 
-<div align="center">
 <form action="{{ path('jili_backend_activitygathering_saveordertotal') }}" method="POST">
-<table>
+<table align="center">
 <tr>
     <td>{{ form_label(form.total) }}</td>
     <td>
@@ -18,11 +17,8 @@ Taobao订单数量创建-201501月活动-{{ parent() }}
     {{ form_widget(form.total) }}
 </td>
 </tr>
-
-</table>
-
 {{ form_rest(form) }}
 <tr><td>&nbsp;</td><td><input type="submit" value="Create" /></td></tr>
+</table>
 </form>
-</div>
 {% endblock %}
