--- a/src/Jili/BackendBundle/Resources/views/ActivityGathering/edit_taobao_order_total_form.html.twig
+++ b/src/Jili/BackendBundle/Resources/views/ActivityGathering/edit_taobao_order_total_form.html.twig
@@ -7,22 +7,17 @@ Taobao订单数量修改-201501月活动-{{ parent() }}
 {% block body %}
 
 {% include("JiliBackendBundle::session_notification.html.twig") %}
-<div align="center">
-    <form action="{{ path('jili_backend_activitygathering_updateordertotal') }}" method="POST">
-        <table>
-            <tr>
-                <td>{{ form_label(form.total) }}</td>
-                <td>
-                    {{ form_errors(form.total) }}
-                    {{ form_widget(form.total) }}
-                </td>
-            </tr>
-
-        </table>
-
+<form action="{{ path('jili_backend_activitygathering_updateordertotal') }}" method="POST">
+    <table align="center">
+        <tr>
+            <td>{{ form_label(form.total) }}</td>
+            <td>
+                {{ form_errors(form.total) }}
+                {{ form_widget(form.total) }}
+            </td>
+        </tr>
         {{ form_rest(form) }}
         <tr><td>&nbsp;</td><td><input type="submit" value="Update" /></td></tr>
-
-    </form>
-</div>
+    </table>
+</form>
 {% endblock %}
